# picam2

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
