[package]
name = "picam2_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# opencv = { version = "0.92.0", default-features = false, features = ["imgcodecs", "videoio"] }
zenoh = "1.0.0-alpha.6"
rust-faces = { version = "1.0.0", features = ["viz"] }
ndarray = "0.15"
image = "0.24.9"
turbojpeg = {version = "1.0", features = ["image"]}
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
